feat : 입찰 캐싱 전략 수정 DTO 수정 및 조회 로직 변경